--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -41,6 +49,8 @@
     "si-tools": "^1.3.2",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "systeminformation": "^5.22.9"
+    "systeminformation": "^5.22.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
